test/error/enum_range_x.sv
// pattern: expected an integral number, but found 'x
module top;
    enum {
        A['x]
    } x;
endmodule
